--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ window.addEventListener('beforeunload', function() {
         const quiz = [
             {
                 question: "What materials can be used to select a suitable filter?",
-                options: ["Quartz gravel", "Plastic", "Clay"],
+                options: ["Quartz Gravel", "Plastic", "Clay"],
                 answer: 0
             }
         ];
